--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ figcaption {
   text-align: center;
   font-size: 12px;
 }
-#featured-property p {
+#featured-property + p {
   width: 800px;
   text-align: center;
   margin-left: auto;
