--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ figcaption {
   text-align: center;
   font-size: 12px;
 }
-#featured-property {
+#featured-property p {
   width: 800px;
   text-align: center;
-
+  margin-left: auto;
+  margin-right: auto;
 }
