Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -31,6 +31,5 @@ figcaption {
 #details div {
   display: block;
   float: left;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
