--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+h1, nav {
+  color: red;
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a {
+  padding-left: : 10px;
+  padding-right: : 10px;
+  background-color: grey;
+}
+figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+#details div {
+  display: block;
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: yellow;
+}
